--- a/quality_inspection/quality_inspection/doctype/quality_inspection_settings_qi/quality_inspection_settings_qi.json
+++ b/quality_inspection/quality_inspection/doctype/quality_inspection_settings_qi/quality_inspection_settings_qi.json
@@ -172,7 +172,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-09-02 04:50:16.341739",
+ "modified": "2025-09-15 00:50:19.563738",
  "modified_by": "Administrator",
  "module": "Quality Inspection",
  "name": "Quality Inspection Settings QI",
@@ -187,6 +187,13 @@
    "role": "System Manager",
    "share": 1,
    "write": 1
+  },
+  {
+   "email": 1,
+   "print": 1,
+   "read": 1,
+   "role": "All",
+   "share": 1
   }
  ],
  "row_format": "Dynamic",
