--- a/quality_inspection/quality_inspection/doctype/quality_inspection_settings_qi/quality_inspection_settings_qi.json
+++ b/quality_inspection/quality_inspection/doctype/quality_inspection_settings_qi/quality_inspection_settings_qi.json
@@ -172,7 +172,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-09-15 00:50:19.563738",
+ "modified": "2025-09-29 01:34:00.537566",
  "modified_by": "Administrator",
  "module": "Quality Inspection",
  "name": "Quality Inspection Settings QI",
@@ -185,6 +185,16 @@
    "print": 1,
    "read": 1,
    "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "print": 1,
+   "read": 1,
+   "role": "QI Manager",
    "share": 1,
    "write": 1
   },
