feat: v0.0.8-add notification on workflow state change

--- a/quality_inspection/quality_inspection/notification/qi_report_approved/qi_report_approved.json
+++ b/quality_inspection/quality_inspection/notification/qi_report_approved/qi_report_approved.json
@@ -11,9 +11,9 @@
  "event": "Value Change",
  "idx": 0,
  "is_standard": 1,
- "message": "Dear Quality Inspector,<br>\nYour submitted QI report has been approved by {{doc.last_workflow_actor_fn}}.<br>\nComments: {{ doc.last_workflow_comment or 'Approved'}}<br>\nYou may proceed with the next steps as per process.<br>\n<br><br>\nThank you,<br>\n Workflow Notification System",
+ "message": "<p>Dear Quality Inspector,<br>\nYour submitted QI report has been approved by {{doc.last_workflow_actor_fn}}.<br>\nComments: {{ doc.last_workflow_comment or 'Approved'}}<br>\nYou may proceed with the next steps as per process.<br>\n<br><br>\nThank you,<br>\n Workflow Notification System</p>\n",
  "message_type": "Markdown",
- "modified": "2025-12-02 22:44:46.850779",
+ "modified": "2025-12-05 01:57:39.187622",
  "modified_by": "Administrator",
  "module": "Quality Inspection",
  "name": "QI Report Approved",
